# prompt_router

./: AGENTS.md  README.md  prompt_router_eval_v0_1.schema.json  pyproject.toml
datasets/eval/: prompt_router_eval_v0_1_coverage.md  prompt_router_eval_v0_1_dev_batch_001.jsonl  prompt_router_eval_v0_1_hardening_batch_003.jsonl  prompt_router_eval_v0_1_paper_inspired_batch_002.jsonl
docs/: 01_problem_scenario.md  02_requirements.md  03_architecture.md  04_data_model.md  05_cli_contract.md  06_policy_and_security.md  07_development_plan.md
docs/codex/: 01_bootstrap_repo.md  02_feature_semantic_check.md  03_feature_docker_postgres.md
docs/superpowers/plans/: 2026-06-22-semantic-risk-check.md  2026-06-22-starter-repo-hardening.md
docs/superpowers/specs/: 2026-06-22-semantic-risk-check-design.md  2026-06-22-starter-repo-hardening-design.md
src/prompt_router/: __init__.py  classifier.py  cli.py  config.py  constants.py  db.py  evaluator.py  policy.py  redactor.py  schemas.py  semantic.py
src/prompt_router/data/: __init__.py  semantic_examples.json
src/prompt_router_starter.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_classifier_policy.py  test_cli_db.py  test_config.py  test_eval.py  test_eval_schema.py  test_schemas.py  test_semantic.py
