[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-router-starter"
version = "0.1.0"
description = "Local-first prompt classification and routing CLI prototype"
requires-python = ">=3.10"
authors = [{ name = "Prompt Router Contributors" }]
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
pr = "prompt_router.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
